--- a/Code/Code.ioc
+++ b/Code/Code.ioc
@@ -11,24 +11,29 @@ FDCAN1.NominalTimeSeg1=13
 FDCAN1.NominalTimeSeg2=2
 File.Version=6
 GPIO.groupedBy=
+I2C2.IPParameters=Timing
+I2C2.Timing=0x10805D88
 KeepUserPlacement=false
 Mcu.CPN=STM32G431RBT6
 Mcu.Family=STM32G4
 Mcu.IP0=FDCAN1
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP4=USART2
-Mcu.IPNb=5
+Mcu.IP1=I2C2
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IP5=USART2
+Mcu.IPNb=6
 Mcu.Name=STM32G431R(6-8-B)Tx
 Mcu.Package=LQFP64
-Mcu.Pin0=PA2
-Mcu.Pin1=PA3
-Mcu.Pin2=PA11
-Mcu.Pin3=PA12
-Mcu.Pin4=VP_SYS_VS_Systick
-Mcu.Pin5=VP_SYS_VS_DBSignals
-Mcu.PinsNb=6
+Mcu.Pin0=PF0-OSC_IN
+Mcu.Pin1=PA2
+Mcu.Pin2=PA3
+Mcu.Pin3=PC4
+Mcu.Pin4=PA11
+Mcu.Pin5=PA12
+Mcu.Pin6=VP_SYS_VS_Systick
+Mcu.Pin7=VP_SYS_VS_DBSignals
+Mcu.PinsNb=8
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G431RBTx
@@ -57,6 +62,10 @@ PA2.Signal=USART2_TX
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PC4.Mode=I2C
+PC4.Signal=I2C2_SCL
+PF0-OSC_IN.Mode=I2C
+PF0-OSC_IN.Signal=I2C2_SDA
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
