I2C is now working with the OLED Can fill screen white Need to figure out how to draw to screen

--- a/Code/Code.ioc
+++ b/Code/Code.ioc
@@ -11,13 +11,13 @@ FDCAN1.NominalTimeSeg1=13
 FDCAN1.NominalTimeSeg2=2
 File.Version=6
 GPIO.groupedBy=
-I2C2.IPParameters=Timing
-I2C2.Timing=0x10805D88
+I2C3.IPParameters=Timing
+I2C3.Timing=0x10805D88
 KeepUserPlacement=false
 Mcu.CPN=STM32G431RBT6
 Mcu.Family=STM32G4
 Mcu.IP0=FDCAN1
-Mcu.IP1=I2C2
+Mcu.IP1=I2C3
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SYS
@@ -25,10 +25,10 @@ Mcu.IP5=USART2
 Mcu.IPNb=6
 Mcu.Name=STM32G431R(6-8-B)Tx
 Mcu.Package=LQFP64
-Mcu.Pin0=PF0-OSC_IN
-Mcu.Pin1=PA2
-Mcu.Pin2=PA3
-Mcu.Pin3=PC4
+Mcu.Pin0=PA2
+Mcu.Pin1=PA3
+Mcu.Pin2=PC8
+Mcu.Pin3=PC9
 Mcu.Pin4=PA11
 Mcu.Pin5=PA12
 Mcu.Pin6=VP_SYS_VS_Systick
@@ -62,10 +62,10 @@ PA2.Signal=USART2_TX
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
-PC4.Mode=I2C
-PC4.Signal=I2C2_SCL
-PF0-OSC_IN.Mode=I2C
-PF0-OSC_IN.Signal=I2C2_SDA
+PC8.Mode=I2C
+PC8.Signal=I2C3_SCL
+PC9.Mode=I2C
+PC9.Signal=I2C3_SDA
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -97,7 +97,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_FDCAN1_Init-FDCAN1-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_FDCAN1_Init-FDCAN1-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_I2C2_Init-I2C2-false-HAL-true
 RCC.ADC12Freq_Value=96000000
 RCC.AHBFreq_Value=96000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
