Increased I2C speed to 1000Khz Everything seems to be wroking and screen update is much better

--- a/Code/Code.ioc
+++ b/Code/Code.ioc
@@ -11,8 +11,9 @@ FDCAN1.NominalTimeSeg1=13
 FDCAN1.NominalTimeSeg2=2
 File.Version=6
 GPIO.groupedBy=
-I2C3.IPParameters=Timing
-I2C3.Timing=0x10805D88
+I2C3.I2C_Speed_Mode=I2C_Fast_Plus
+I2C3.IPParameters=Timing,I2C_Speed_Mode
+I2C3.Timing=0x00700814
 KeepUserPlacement=false
 Mcu.CPN=STM32G431RBT6
 Mcu.Family=STM32G4
