--- a/Code/Code.ioc
+++ b/Code/Code.ioc
@@ -2,6 +2,25 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+Dma.Request0=TIM3_CH1
+Dma.RequestsNb=1
+Dma.TIM3_CH1.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.TIM3_CH1.0.EventEnable=DISABLE
+Dma.TIM3_CH1.0.Instance=DMA1_Channel1
+Dma.TIM3_CH1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.TIM3_CH1.0.MemInc=DMA_MINC_ENABLE
+Dma.TIM3_CH1.0.Mode=DMA_NORMAL
+Dma.TIM3_CH1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.TIM3_CH1.0.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM3_CH1.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.TIM3_CH1.0.Priority=DMA_PRIORITY_LOW
+Dma.TIM3_CH1.0.RequestNumber=1
+Dma.TIM3_CH1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.TIM3_CH1.0.SignalID=NONE
+Dma.TIM3_CH1.0.SyncEnable=DISABLE
+Dma.TIM3_CH1.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.TIM3_CH1.0.SyncRequestNumber=1
+Dma.TIM3_CH1.0.SyncSignalID=NONE
 FDCAN1.CalculateBaudRateNominal=500000
 FDCAN1.CalculateTimeBitNominal=2000
 FDCAN1.CalculateTimeQuantumNominal=125.0
@@ -17,30 +36,35 @@ I2C3.Timing=0x00700814
 KeepUserPlacement=false
 Mcu.CPN=STM32G431RBT6
 Mcu.Family=STM32G4
-Mcu.IP0=FDCAN1
-Mcu.IP1=I2C3
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IP5=USART2
-Mcu.IPNb=6
+Mcu.IP0=DMA
+Mcu.IP1=FDCAN1
+Mcu.IP2=I2C3
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SYS
+Mcu.IP6=TIM3
+Mcu.IP7=USART2
+Mcu.IPNb=8
 Mcu.Name=STM32G431R(6-8-B)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PA2
 Mcu.Pin1=PA3
-Mcu.Pin2=PC8
-Mcu.Pin3=PC9
-Mcu.Pin4=PA11
-Mcu.Pin5=PA12
-Mcu.Pin6=VP_SYS_VS_Systick
-Mcu.Pin7=VP_SYS_VS_DBSignals
-Mcu.PinsNb=8
+Mcu.Pin2=PA6
+Mcu.Pin3=PC8
+Mcu.Pin4=PC9
+Mcu.Pin5=PA11
+Mcu.Pin6=PA12
+Mcu.Pin7=VP_SYS_VS_Systick
+Mcu.Pin8=VP_SYS_VS_DBSignals
+Mcu.Pin9=VP_TIM3_VS_ClockSourceINT
+Mcu.PinsNb=10
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G431RBTx
 MxCube.Version=6.13.0
 MxDb.Version=DB.6.0.130
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -63,6 +87,7 @@ PA2.Signal=USART2_TX
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PA6.Signal=S_TIM3_CH1
 PC8.Mode=I2C
 PC8.Signal=I2C3_SCL
 PC9.Mode=I2C
@@ -98,7 +123,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_FDCAN1_Init-FDCAN1-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_I2C2_Init-I2C2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_FDCAN1_Init-FDCAN1-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_I2C3_Init-I2C3-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true
 RCC.ADC12Freq_Value=96000000
 RCC.AHBFreq_Value=96000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -143,10 +168,17 @@ RCC.USART3Freq_Value=48000000
 RCC.USBFreq_Value=96000000
 RCC.VCOInputFreq_Value=16000000
 RCC.VCOOutputFreq_Value=192000000
+SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
+SH.S_TIM3_CH1.ConfNb=1
+TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM3.IPParameters=Channel-PWM Generation1 CH1,PeriodNoDither
+TIM3.PeriodNoDither=120-1
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
 VP_SYS_VS_DBSignals.Signal=SYS_VS_DBSignals
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=custom
